# stellar-ide

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/artifacts/: generator.rs  mod.rs  parser.rs  zipper.rs
backend/src/auth/: github_oauth.rs  jwt.rs  middleware.rs  mod.rs
backend/src/cache/: build_cache.rs  client.rs  collab_state.rs  mod.rs  sessions.rs
backend/src/collab/: broadcast.rs  mod.rs  operations.rs  room.rs
backend/src/db/: mod.rs  pool.rs
backend/src/db/models/: artifact.rs  deployment.rs  mod.rs  project.rs  user.rs
backend/src/db/queries/: artifacts.rs  deployments.rs  mod.rs  projects.rs  users.rs
backend/src/docker/: cleanup.rs  mod.rs  runner.rs  semaphore.rs
backend/src/errors/: app_error.rs
backend/src/models/: requests.rs  responses.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/artifacts/: download.rs  generate.rs  mod.rs
backend/src/routes/auth/: github.rs  login.rs  logout.rs  mod.rs  refresh.rs
backend/src/routes/collab/: websocket.rs
backend/src/routes/deploy/: deploy.rs  history.rs  interface.rs  mod.rs
backend/src/routes/projects/: create.rs  delete.rs  get.rs  list.rs  update.rs
backend/src/routes/sandbox/: audit.rs  build.rs  compile.rs  mod.rs  test.rs
backend/src/routes/wallet/: friendbot.rs  mod.rs
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.sandbox  nginx.conf
docker/postgres/: init.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  vite-env.d.js
frontend/src/api/: artifacts.js  auth.js  client.js  compile.js  deploy.js  projects.js  websocket.js
frontend/src/hooks/: useArtifacts.js  useAudit.js  useAuth.js  useBuild.js  useCollaboration.js  useCompile.js  useDeploy.js  useEditor.js  useProject.js  useTerminal.js  useTest.js  useWallet.js
frontend/src/lib/: artifacts-generator.js  monaco-config.js  utils.js  (+2 more)
migrations/: 001_create_users.sql  002_create_projects.sql  003_create_deployments.sql  004_create_artifacts.sql  005_create_sessions.sql
sandbox/: Dockerfile  audit.sh  build.sh  test.sh
sandbox/templates/: Cargo.toml.template
scripts/: dev.sh  migrate.sh  reset_db.sh  setup.sh
(+56 files in other folders)
