[package]
name    = "stellaride-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellaride-backend"
path = "src/main.rs"

[dependencies]

# ── Web framework ─────────────────────────────
axum              = { version = "0.7",  features = ["ws", "macros"] }
axum-extra        = { version = "0.9",  features = ["typed-header"] }
tower             = "0.4"
tower-http        = { version = "0.5",  features = ["cors", "trace"] }
tokio             = { version = "1",    features = ["full"] }
futures           = "0.3"

# ── Database ──────────────────────────────────
sqlx              = { version = "0.7",  features = [
                        "runtime-tokio-rustls",
                        "postgres",
                        "uuid",
                        "chrono",
                        "json",
                    ]}

# ── Redis ─────────────────────────────────────
redis             = { version = "0.25", features = [
                        "aio",
                        "tokio-comp",
                        "connection-manager",
                    ]}

# ── Auth ──────────────────────────────────────
jsonwebtoken      = "9"
bcrypt            = "0.15"

# ── Serialization ─────────────────────────────
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"

# ── HTTP client (GitHub OAuth, Friendbot) ─────
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── UUID ──────────────────────────────────────
uuid              = { version = "1",    features = ["v4", "serde"] }

# ── Date/time ─────────────────────────────────
chrono            = { version = "0.4",  features = ["serde"] }

# ── Error handling ────────────────────────────
thiserror         = "1"
anyhow            = "1"

# ── Logging / tracing ─────────────────────────
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Environment ───────────────────────────────
dotenvy           = "0.15"

# ── Artifacts / ZIP ───────────────────────────
zip               = "0.6"
tempfile          = "3"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true